--- a/inventory-sample.yml
+++ b/inventory-sample.yml
@@ -3,19 +3,18 @@ k3s_cluster:
   children:
     server:
       hosts:
-        10.0.1.12:
+        10.0.1.1:
     agent:
       hosts:
-        10.0.1.12:
-        10.0.1.13:
-        10.0.1.14:
+        10.0.1.2:
+        10.0.1.3:
 
   # Required Vars
   vars:
     ansible_port: 22
     ansible_user: ansible-admin
     k3s_version: v1.26.9+k3s1
-    token: "mytoken"  # generate a random 50 character string here https://www.browserling.com/tools/random-string
+    token: "random-token-here"  # generate a random 50 character string here https://www.browserling.com/tools/random-string
     api_endpoint: "{{ hostvars[groups['server'][0]]['ansible_host'] | default(groups['server'][0]) }}"
     extra_server_args: ""
     extra_agent_args: ""
