--- a/roles/k3s_server/tasks/main.yml
+++ b/roles/k3s_server/tasks/main.yml
@@ -176,3 +176,9 @@
   with_items:
     - kubectl
     - crictl
+
+- name: Add read permissions to the kubeconfig
+  ansible.builtin.file:
+    path: "/etc/rancher/k3s/k3s.yaml"
+    mode: "+r"
+    state: file
